[package]
name = "pygo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
evalexpr = "6.3.0"
fancy-regex = "0.11.0"
lazy_static = "1.4.0"
once_cell = "1.17.1"
regex = "1.7.3"

[[bench]]
name = "lex_benchmark"
harness = false

[[bench]]
name = "parser_benchmark"
harness = false

