[package]
name = "pygo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.43.0"
criterion = "0.4.0"
evalexpr = "6.3.0"
fancy-regex = "0.11.0"
hashbrown = "0.13.2"
lazy_static = "1.4.0"
nom = "7.1.3"
once_cell = "1.17.1"
regex = "1.8.1"

[[bench]]
name = "lex_benchmark"
path = "src/benches/lex_benchmark"
harness = false

[[bench]]
name = "parser_benchmark"
path = "src/benches/parser_benchmark"
harness = false

